FIX: [UI] Text area overflows its parent element #15161

--- a/themes/original/scss/_common.scss
+++ b/themes/original/scss/_common.scss
@@ -3771,3 +3771,7 @@ body {
 #filter_query_text {
   vertical-align: baseline;
 }
+
+#textSqlquery{
+  width: 98%;
+}
